fixed gap issue in footer

--- a/styles.css
+++ b/styles.css
@@ -160,8 +160,6 @@ footer {
 
     #infos {
         flex-direction: column;
-        gap: 30px;
-
     }
 }
 
